[metadata]
name = more_lists
author = KOLANICH
url = https://github.com/KOLANICH/more_lists.py
description = Some additional types of lists I had to implement. May be useful for someone.
long_description = file: ReadMe.md
keywords = list, base, silent
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent

[options]
python_requires = >=3
zip_safe = True
py_modules = more_lists
setup_requires = setuptools_scm;
test_suite = tests.test
